[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "bettertags"
version = "1.1.0"
description = "mkdocs-material tag plugin with free enhanced versions of some insiders features"
readme = "README.md"
authors = [{ name = "Ryan Ziegler", email = "ryan@ziegler.lol" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["mkdocs", "insiders", "tags", "free"]
dependencies = [
    "markdown",
    "mkdocs"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/rzig/bettertags"
